--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -84,23 +84,23 @@
 }
 
 .content.art-content .main {
-    background: linear-gradient(140deg, #fd7819, #f31b48);
+    background: linear-gradient(140deg, #fd7b1f, #f33159);
 }
 
 .content.projects-content .main {
-    background: linear-gradient(140deg, #f31b48, #940590);
+    background: linear-gradient(140deg, #f33159, #a02dbd);
 }
 
 .content.blog-content .main {
-    background: linear-gradient(140deg, #940590, #28a6e4);
+    background: linear-gradient(140deg, #a02dbd, #4280f1);
 }
 
 .content.about-content .main {
-    background: linear-gradient(140deg, #28a6e4, #0ab732);
+    background: linear-gradient(140deg, #4280f1, #0ab779);
 }
 
 .content.contact-content .main {
-    background: linear-gradient(140deg, #0ab779, #0ab70f);
+    background: linear-gradient(140deg, #0ab779, #9edc65);
 }
 
 .main-footer {
@@ -283,15 +283,14 @@ p {
 .button-wrapper {
     display: inline-block;
     position: relative;
-    border: 2px solid #212121;
-    min-height: 40px;
+    border: 2px solid rgba(33, 33, 33, 0.7);
 }
 
 .button-wrapper .background {
     height: 100%;
     position: absolute;
     width: 0;
-    background-color: #212121;
+    background-color: rgba(33, 33, 33, 0.7);
     -webkit-transition: width 0.2s ease-in;
     -moz-transition: width 0.2s ease-in;
     transition: width 0.2s ease-in;
@@ -470,7 +469,6 @@ button {
     }
     .content .feature-content {
         width: 100%;
-        padding-left: 0;
         padding-top: 1em;
         min-height: 100%;
         height: auto;
