--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -27,7 +27,7 @@
     float: left;
     min-height: 0;
     font-size: 1.25em;
-    padding: 1em;
+    padding-left: 1em;
     box-shadow: none;
 }
 
