--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -216,7 +216,7 @@
         margin-top: 0;
     }
     .home-content.adjust-fix {
-        margin-top: 60em;
+        margin-top: 165vw;
     }
     .overview-wrapper {
         min-height: 550px;
