--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -80,44 +80,17 @@
     <h2>Work Experience</h2>
     <div class="exp-container">
       <ul>
-        <li viewportCheck [padding]=100>
+        <li viewportCheck [padding]=100 *ngFor="let exp of experiences">
           <div #expItem class="exp-wrapper clearfix">
             <div class="logo-wrapper">
-              <img src="assets/sgm-logo.png" />
+              <img [src]="'assets/' + exp.imageUrl" />
             </div>
             <div class="exp-summary">
               <div class="exp-header">
-                <h3>Sapient Global Markets</h3>
-                <div class="time">Oct, 2016 - present</div>
+                <h3>{{exp.companyName}}</h3>
+                <div class="time">{{exp.startDate}} - {{exp.endDate}}</div>
               </div>
-              <p>
-                I worked as Senior Interactive Developer for Wells Fargo Bank. I used this opportunity to design and
-                develop apps that qualify
-                the web accessibilty specifications and fulfill the user experience guidelines. Here I worked on
-                custom web widgets based on YUI and Angular SPAs.
-              </p>
-            </div>
-          </div>
-        </li>
-        <li viewportCheck [padding]=100>
-          <div #expItem class="exp-wrapper clearfix">
-            <div class="logo-wrapper">
-              <img src="assets/tcs-logo.png" />
-            </div>
-            <div class="exp-summary">
-              <div class="exp-header">
-                <h3>Tata Consultancy Services</h3>
-                <div class="time">March, 2012 - Sep, 2016</div>
-              </div>
-              <p>
-                I started my carreer with TCS as a Systems Engineer. During my first 2 years I worked as Java
-                Developer but worked on multiple
-                technologies inclusing PHP, shell scripting, frontend stuff and lot more ebing on a support and
-                enhancement
-                project with DexMedia. Due to interest in design and frontend stuff I choose to move to a more of a
-                frontend
-                role and worked as a IT Analyst for Pearson where I worked on mutiple Angular and OOJS projects.
-              </p>
+              <p>{{exp.description}}</p>
             </div>
           </div>
         </li>
