--- a/src/app/blog/blog-list/blog-list.component.html
+++ b/src/app/blog/blog-list/blog-list.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="blog-card feature-content featured-blog">
         <div class="title">
-          <h3>Sample Blog</h3>
+          <h3>Work in progress</h3>
           <a routerLink="/blog/new-article">
             <div class="button-wrapper">
               <div class="background"></div>
@@ -22,16 +22,14 @@
   <section class="blog-list">
     <h2>All Blog posts</h2>
     <ul>
-      <li *ngFor="let post of posts | async">
-        <div class="blog-card view-check below-view" viewportCheck>
-          <div class="cover-art"></div>
-          <div class="info">
-            <div class="title">
-              <h3>{{post.title}}</h3>
-            </div>
-            <div class="desc">{{post.summary}}</div>
-            <div class="date">{{post.date | date}}</div>
+      <li *ngFor="let post of posts | async" class="blog-card view-check below-view" viewportCheck>
+        <div class="cover-art"></div>
+        <div class="info">
+          <div class="title">
+            <h3>{{post.title}}</h3>
           </div>
+          <div class="desc">{{post.summary}}</div>
+          <div class="date">{{post.date | date}}</div>
         </div>
       </li>
     </ul>
