Bringing Search back

--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -82,7 +82,7 @@
                             [ngStyle]="{ 'background-image': 'url(' + result.thumbLink + ')'}">
                         </div>
                         <div class="inline-middle result-info">
-                            <div class="result-name">{{result.name}}</div>
+                            <div class="result-name">{{result.title}}</div>
                             <div class="result-desc">{{result.desc}}</div>
                         </div>
                     </div>
